--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
     %title More
     %meta(charset="utf-8")
     %meta(name="author" content="Julio Cesar Ody")
+    %meta(name="viewport" content="width=device-width")
     %link(rel="stylesheet" href="/screen.css")
     %script(src="/jquery-1.4.2.min.js")
     %script(src="/more.js")
@@ -11,8 +12,6 @@
       $(['header', 'footer', 'section', 'article']).each(function() { document.createElement(this) });
   %body
     %header
-      %a(href="/paginated")
-        Check out the paginated example →
       %h1 More
     = yield
     %footer
